tests/invalid/module/cycle_a.facet
mod cycle_b;

fn main() -> affine isize {
  1
}
